force-app/main/default/objects/Meeting_Attendees__c/Meeting_Attendees__c.object-meta.xml
<CustomObject>
    <label>Meeting Attendees</label>
    <nameField>
        <displayFormat>MA-{0000}</displayFormat>
        <label>Meeting Attendee</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Meeting Attendees</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>