force-app/main/default/objects/Meeting_Attendees__c/fields/Alternate_Email__c.field-meta.xml
<CustomField>
    <fullName>Alternate_Email__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Alternate Email</label>
    <referenceTo>Alternate_Email__c</referenceTo>
    <relationshipLabel>Meeting Attendees</relationshipLabel>
    <relationshipName>Meeting_Attendees</relationshipName>
    <type>Lookup</type>
</CustomField>