force-app/main/default/objects/Meeting_Attendees__c/fields/Attended__c.field-meta.xml
<CustomField>
    <fullName>Attended__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Attended</label>
    <type>Checkbox</type>
</CustomField>