force-app/main/default/objects/Meeting_Attendees__c/fields/Community__c.field-meta.xml
<CustomField>
    <fullName>Community__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Community</label>
    <referenceTo>Community__c</referenceTo>
    <relationshipLabel>Meeting Attendees</relationshipLabel>
    <relationshipName>Meeting_Attendees</relationshipName>
    <type>Lookup</type>
</CustomField>