force-app/main/default/objects/Meeting_Attendees__c/fields/Contact_Lead_ID__c.field-meta.xml
<CustomField>
    <fullName>Contact_Lead_ID__c</fullName>
    <formula>BLANKVALUE(Contact__r.Id, Lead__r.Id )</formula>
    <label>Contact/Lead ID</label>
    <type>Text</type>
</CustomField>