force-app/main/default/objects/Meeting_Attendees__c/fields/Ext_Register_Id__c.field-meta.xml
<CustomField>
    <fullName>Ext_Register_Id__c</fullName>
    <externalId>true</externalId>
    <label>Ext Register Id</label>
    <length>80</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>