force-app/main/default/objects/Meeting_Attendees__c/fields/Join_Time__c.field-meta.xml
<CustomField>
    <fullName>Join_Time__c</fullName>
    <label>Join Time</label>
    <type>Time</type>
</CustomField>