force-app/main/default/objects/Meeting_Attendees__c/fields/Left_Time__c.field-meta.xml
<CustomField>
    <fullName>Left_Time__c</fullName>
    <label>Left Time</label>
    <type>Time</type>
</CustomField>