force-app/main/default/objects/Meeting_Attendees__c/fields/New_Contact__c.field-meta.xml
<CustomField>
    <fullName>New_Contact__c</fullName>
    <formula>CreatedDate - Contact__r.CreatedDate</formula>
    <label>New Contact</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>