force-app/main/default/objects/Meeting_Attendees__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Attended</fullName>
            </value>
            <value>
                <fullName>Registered</fullName>
            </value>
            <value>
                <fullName>Approved</fullName>
                <isActive>false</isActive>
                <label>Approved</label>
            </value>
            <value>
                <fullName>Denied</fullName>
                <isActive>false</isActive>
                <label>Denied</label>
            </value>
            <value>
                <fullName>Invited</fullName>
                <isActive>false</isActive>
                <label>Invited</label>
            </value>
            <value>
                <fullName>Pending for approval</fullName>
                <isActive>false</isActive>
                <label>Pending for approval</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>