force-app/main/default/objects/Meeting_Attendees__c/listViews/OMP_Open_House_registrants_20200309.listView-meta.xml
<ListView>
    <fullName>OMP_Open_House_registrants_20200309</fullName>
    <columns>Contact__c</columns>
    <columns>Lead__c</columns>
    <columns>Status__c</columns>
    <columns>Meeting__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Meeting__c</field>
        <operation>contains</operation>
        <value>open house</value>
    </filters>
    <label>OMP Open House registrants 20200309</label>
</ListView>